kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-cloud-native-app
  labels:
    app: jenkins-cloud-native-app
spec:
  selector:
    app: jenkins-cloud-native-app
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP
